[project]
name = "apify-google-jobs-pay-per-result"
version = "0.1.0"
description = "Example usage of the Google Jobs Scraper API - Pay Per Result Apify actor"
requires-python = ">=3.9"
dependencies = [
    "apify-client>=1.8.1",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
