[project]
name = "apify-google-jobs-pay-per-result-api"
version = "0.1.0"
description = "Example client for the Google Jobs API (Pay Per Result) Apify Actor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
